# agents-playgroud

./: .gitignore  README.md  main.py  pyproject.toml  settings.toml
selectorat/: main.py  manager.py
selectorat/agents/: planner_agent.py  search_agent.py  writer_agent.py
selectorat/tools/: search_ozon.py
